Fixed Alignment issue

--- a/AirBnb-project/src/components/CostCalculator/CostCalculator.css
+++ b/AirBnb-project/src/components/CostCalculator/CostCalculator.css
@@ -73,15 +73,18 @@
     width: 100%;
 }
 
+.react-datepicker__input-container,
 .react-datepicker__input-container input {
     width: 100%;
+}
+
+.react-datepicker__input-container input {
     border: none !important;
     outline: none;
     background: transparent;
     box-shadow: none;
     padding: 0;
     margin: 0;
-    align-items: center;
     font-size: 15px;
     font-family: inherit;
     cursor: pointer;
